@@ -8,6 +8,7 @@ import com.example.coursework.model.ApiSource;
 import com.example.coursework.service.AggregationService;
 import com.example.coursework.service.ApiSourceRegistry;
 import com.example.coursework.service.FileService;
+import com.example.coursework.service.ParallelDataFetcher;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
@@ -23,18 +24,17 @@ import java.util.stream.Collectors;
 public class ApiController {
 
     private final ApiSourceRegistry sourceRegistry;
-    private final AggregationService aggregationService;
+    private final ParallelDataFetcher parallelDataFetcher;
     private final FileService fileService;
 
     public ApiController(ApiSourceRegistry sourceRegistry,
-                         AggregationService aggregationService,
+                         ParallelDataFetcher parallelDataFetcher,
                          FileService fileService) {
         this.sourceRegistry = sourceRegistry;
-        this.aggregationService = aggregationService;
+        this.parallelDataFetcher = parallelDataFetcher;
         this.fileService = fileService;
     }
 
-    /** Получить список доступных источников данных */
     @GetMapping("/sources")
     public List<ApiInfoDto> listSources() {
         return sourceRegistry.getAllSources().stream()
@@ -42,19 +42,16 @@ public class ApiController {
                 .collect(Collectors.toList());
     }
 
-    /** Запустить сбор данных из указанных источников и сохранить в файл */
     @PostMapping("/fetch")
     public ResponseEntity<?> fetchData(@RequestBody FetchRequest request) {
-        // 1. Получаем выбранные источники
         List<ApiSource> sources = sourceRegistry.getSourcesByName(request.getSources());
         if (sources.isEmpty()) {
             return ResponseEntity.badRequest().body("No valid sources selected");
         }
 
-        // 2. Собираем данные
-        List<AggregatedRecord> newRecords = aggregationService.fetchData(sources);
+        int maxParallel = request.getMaxParallel() != null ? request.getMaxParallel() : 5;
+        List<AggregatedRecord> newRecords = parallelDataFetcher.fetchAll(sources, maxParallel);
 
-        // 3. Определяем имя файла
         String format = request.getFormat().toLowerCase();
         if (!format.equals("json") && !format.equals("csv")) {
             return ResponseEntity.badRequest().body("Format must be 'json' or 'csv'");
@@ -65,7 +62,6 @@ public class ApiController {
         }
         Path filePath = Paths.get(filename);
 
-        // 4. Сохраняем
         try {
             fileService.save(newRecords, filePath, format, request.isAppend());
             return ResponseEntity.ok(newRecords.size() + " records saved to " + filename);
@@ -75,7 +71,6 @@ public class ApiController {
         }
     }
 
-    /** Получить содержимое ранее сохранённого файла (с возможностью фильтрации по источнику) */
     @GetMapping("/data")
     public ResponseEntity<?> getData(
             @RequestParam String filename,
@@ -88,7 +83,7 @@ public class ApiController {
             if (source != null && !source.isBlank()) {
                 records = records.stream()
                         .filter(r -> source.equals(r.getSource()))
-                        .collect(Collectors.toList());
+                        .toList();
             }
 
             List<RecordDto> dtos = records.stream()
@@ -101,7 +96,6 @@ public class ApiController {
         }
     }
 
-    /** Простой эндпоинт для проверки работоспособности */
     @GetMapping("/ping")
     public String ping() {
         return "pong";
